<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvPreTestTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/tvPreTestTitleText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:layout_gravity="top"
        android:layout_alignParentStart="false" />

    <TextView
        android:id="@+id/tvPreTestNotice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/tvPreTestTitle"
        android:text="@string/PreTestIntro"
        android:gravity="center" />

    <TextView
        android:id="@+id/tvPreTestQuestion"
        android:layout_below="@+id/tvPreTestNotice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/tvPreTestQuestionText"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_gravity="top" />

    <TextView
        android:id="@+id/tvPreTestActualQuestion"
        android:layout_below="@+id/tvPreTestQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/tvPreTestActualQuestionText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:text="@string/radioPreTestOne"
        android:id="@+id/btnPreTestOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/RadioButton"
        android:background="@drawable/rounded_button"
        android:textColor="@color/radio_button_blue_text"
        android:layout_above="@+id/btnPreTestTwo"
        android:layout_gravity="bottom"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp" />

    <Button
        android:text="@string/radioPreTestTwo"
        android:id="@+id/btnPreTestTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/RadioButton"
        android:background="@drawable/rounded_button"
        android:textColor="@color/radio_button_blue_text"
        android:layout_above="@+id/btnPreTestThree"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp" />

    <Button
        android:text="@string/radioPreTestThree"
        android:id="@+id/btnPreTestThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/RadioButton"
        android:background="@drawable/rounded_button"
        android:textColor="@color/radio_button_blue_text"
        android:layout_above="@+id/btnPreTestFour"
        android:layout_gravity="bottom"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp" />

    <Button
        android:text="@string/radioPreTestFour"
        android:id="@+id/btnPreTestFour"
        android:layout_width="match_parent"
        style="@style/RadioButton"
        android:background="@drawable/rounded_button"
        android:textColor="@color/radio_button_blue_text"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp" />
</RelativeLayout>